<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.8.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.santiago</groupId>
    <artifactId>dependency</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>dependency</name>
    <packaging>pom</packaging>

    <properties>
        <dependency.version>1.0.0-SNAPSHOT</dependency.version>
        <dom4j.version>1.6.1</dom4j.version>
        <fastjson.version>1.2.58</fastjson.version>
        <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
        <validation.api.version>2.0.1.Final</validation.api.version>
        <jackson.databind.version>2.9.9.3</jackson.databind.version>
        <java.version>1.8</java.version>
        <joda.time.version>2.10.4</joda.time.version>
        <mapper.spring.boot.starter.version>2.0.3</mapper.spring.boot.starter.version>
        <mapper.version>4.1.5</mapper.version>
        <mybatis.spring.boot.starter.version>1.1.1</mybatis.spring.boot.starter.version>
        <pagehelper.spring.boot.starter.version>1.2.5</pagehelper.spring.boot.starter.version>
        <spring.kafka.version>1.1.1.RELEASE</spring.kafka.version>
        <spring.tx.version>5.0.7.RELEASE</spring.tx.version>
        <swagger.annotations.version>2.0.9</swagger.annotations.version>
        <thymeleaf.extras.springsecurity5.version>3.0.4.RELEASE</thymeleaf.extras.springsecurity5.version>
        <xstream.version>1.4.11.1</xstream.version>
        <commons.collections4.version>4.4</commons.collections4.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.santiago</groupId>
                <artifactId>settlement</artifactId>
                <version>${dependency.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons.collections4.version}</version>
            </dependency>

            <dependency>
                <groupId>com.santiago</groupId>
                <artifactId>channel-interact</artifactId>
                <version>${channel.interact.version}</version>
            </dependency>
            <dependency>
                <groupId>dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${dom4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate.validator.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.databind.version}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda.time.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>${spring.kafka.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation.api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>${xstream.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.tx.version}</version>
            </dependency>
            <dependency>
                <groupId>com.santiago</groupId>
                <artifactId>notify</artifactId>
                <version>${dependency.version}</version>
            </dependency>
            <dependency>
                <groupId>com.santiago</groupId>
                <artifactId>core</artifactId>
                <version>${dependency.version}</version>
            </dependency>
            <dependency>
                <groupId>com.santiago</groupId>
                <artifactId>commons</artifactId>
                <version>${dependency.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.spring.boot.starter.version}</version>
            </dependency>
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper-spring-boot-starter</artifactId>
                <version>${mapper.spring.boot.starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.spring.boot.starter.version}</version>
            </dependency>
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper</artifactId>
                <version>${mapper.version}</version>
            </dependency>
            <dependency>
                <groupId>org.thymeleaf.extras</groupId>
                <artifactId>thymeleaf-extras-springsecurity5</artifactId>
                <version>${thymeleaf.extras.springsecurity5.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
